# mfsolve

./: LICENSE  README.md  mfsolve.cabal
Math/: MFSolve.hs
tests/: test.hs
